@@ -9,6 +9,7 @@ Version 2.1.3
    - Changed version to 2.1.3
    - Bugfix: Detecting FAMCreated
    - Bugfix: Maildir protocol provides uid
+   - Cleanup: Using glib functions for directory access (maildir)
 
 Version 2.1.2		2005-03-26 17:28
  * Robert Sowada
